added link for Brazil

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -47,7 +47,7 @@ import Layout from '../layouts/Layout.astro';
                         <ul>
                             <li><strong>Session at ST&SP Conference:</strong> 24–26 March 2026.</li>
                             <li><strong>Special Stream at ISSS:</strong> June 2026.</li>
-                            <li><strong>Special Stream at ASC (Brazil):</strong> 2-7 August 2026.</li>
+                            <li><a href="https://events.asc-cybernetics.org/2026/"><strong>Special Stream at ASC (Brazil):</strong> </a> 3-7 August 2026.</li>
                             <li><strong>Special Stream at ORS (Nottingham):</strong> Sept 8th-10th 2026.</li>
                         </ul>
                     </div>
